--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,4 +90,14 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/dumptls-${{ env.NEW_VERSION }}.tar.gz
           asset_name: dumptls-${{ env.NEW_VERSION }}.tar.gz
-       
+          asset_content_type: application/gzip
+
+      - name: Upload wheel asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/dumptls-${{ env.NEW_VERSION }}-py3-none-any.whl
+          asset_name: dumptls-${{ env.NEW_VERSION }}-py3-none-any.whl
+          asset_content_type: application/zip
