--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel
+          pip install setuptools wheel semver
 
       - name: Get current version
         id: get_version
         run: |
           echo "CURRENT_VERSION=$(python setup.py --version)" >> $GITHUB_ENV
 
-      - name: Bump version and tag
+      - name: Bump version
         id: bump_version
         run: |
           CURRENT_VERSION=$(python setup.py --version)
@@ -55,21 +55,19 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add setup.py
           git commit -m "Bump version to $NEW_VERSION"
-
-          # Create a new git tag
-          git tag "v$NEW_VERSION"
-          git push origin "v$NEW_VERSION"
-
+      
       - name: Push changes
+        run: git push origin main
+
+      - name: Create and push tag
         run: |
-          git push origin main
+          git tag "v${{ env.NEW_VERSION }}"
+          git push origin "v${{ env.NEW_VERSION }}"
 
       - name: Build and upload package
         run: |
           python setup.py sdist bdist_wheel
           ls dist
-        env:
-          NEW_VERSION: ${{ steps.bump_version.outputs.NEW_VERSION }}
 
       - name: Create GitHub release
         id: create_release
