--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add setup.py
           git commit -m "Bump version to $NEW_VERSION"
-      
+
       - name: Push changes
         run: git push origin main
 
@@ -64,38 +64,39 @@ jobs:
           git tag "v${{ env.NEW_VERSION }}"
           git push origin "v${{ env.NEW_VERSION }}"
 
-      - name: Build and upload package
+      - name: Build package
         run: |
           python setup.py sdist bdist_wheel
           ls dist
 
-      - name: Create GitHub release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: "v${{ env.NEW_VERSION }}"
-          release_name: "v${{ env.NEW_VERSION }}"
-          draft: false
-          prerelease: false
+  pypi-publish:
+    name: Upload release to PyPI
+    runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
+    needs: release
 
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/dumptls-${{ env.NEW_VERSION }}.tar.gz
-          asset_name: dumptls-${{ env.NEW_VERSION }}.tar.gz
-          asset_content_type: application/gzip
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Upload wheel asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/dumptls-${{ env.NEW_VERSION }}-py3-none-any.whl
-          asset_name: dumptls-${{ env.NEW_VERSION }}-py3-none-any.whl
-          asset_content_type: application/zip
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
+
+      - name: Retrieve the distributions
+        run: |
+          python setup.py sdist bdist_wheel
+
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
