--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,5 +98,5 @@ jobs:
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: ${{ secrets.PYPI_USERNAME }}
-          password: ${{ secrets.PYPI_PASSWORD }}
+          user: "__token__"
+          password: ${{ secrets.PYPI_API_TOKEN }}
